--- a/css/styleJD.css
+++ b/css/styleJD.css
@@ -200,6 +200,7 @@
     border-radius: 0px 5px 5px 0px;
     margin-left: -1px;
     cursor: pointer;
+    padding: 4px 1px 1px 3px;
 }
 .btn-expand-collapse:hover{
   background-color: #666;
